# deeplearning-langchain-llm-course

./: pyproject.toml  pytest.ini
models/: models_all_downloaded.txt  models_big.txt  models_few.txt  models_one.txt
src/deeplearning_langchain_llm_course/: SequentialChain-BAD.py  _1_1_PromptTemplate.py  _1_2_lcel_PromptTemplate.py  _1_3_lcel_from_templates.py  _1_4_ResponseSchema.py  _1_5_ResponseSchema.py  _1_6_chat_review.py  _2_conversation_bad.py  _2_conversation_old.py  _3_1_SimpleSequentialChain.py  _3_2_SequentialChain.py  _3_3_lcel_SequentialChain.py  _3_4_MultiPromptChain_warn.py  _3_5_MultiPromptChain_lcel_bad.py  _4_RetrievalQA.py  _5_evaluation_warn.py  _6_1_load_tools_initialize_agent.py  _6_2_load_tools_create_react_agent.py  _6_3_create_python_agent_bad.py  _6_4_create_python_agent.py  data.csv  mychains
src/deeplearning_langchain_llm_course/chains/: 1_1_llmchain.py  1_2_llmchain.py  1_3_lcel.py  1_3_llmchain.py  1_3_llmchain.py.0  (+4 more)
tests/: _1_1_PromptTemplate_test.py  _1_1_PromptTemplate_test.py_orig  _1_2_lcel_PromptTemplate_test.py  _1_3_lcel_from_templates_test.py  _1_4_ResponseSchema_test.py  _1_5_ResponseSchema_test.py  _1_6_chat_review_test.py  _2_1_conversation_test.py  _2_2_conversation_old_test.py  _3_1_SimpleSequentialChain_test.py  _3_2_SequentialChain_test.py  _3_3_lcel_SequentialChain_test.py  _3_4_MultiPromptChain_warn.py  _4_RetrievalQA_test.py  _5_evaluation_warn_test.py  _6_1_load_tools_initialize_agent_test.py  _6_2_load_tools_create_react_agent_test.py  _6_3_create_python_agent_test.py  _6_4_create_python_agent.py  _7_ollama_test.py
