[tool.poetry]
name = "deeplearning-langchain-llm-course"
version = "0.1.0"
description = ""
authors = ["Kenneth Wong <kennethwork101@gmail.com>"]
readme = "README.md"
packages = [{include = "deeplearning_langchain_llm_course", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
chromadb = "^0.4.24"
kwwutils = "^0.1.1"
numpy = "^1.26.4"
numexpr = "^2.9.0"
langchain = "^0.1.13"
langchain-experimental = "^0.0.55"
langchainhub = "^0.1.15"
pandas = "^2.2.1"
sentence-transformers = "^2.6.1"
scipy = "^1.12.0"
tensorflow = "^2.16.1"
wikipedia = "^1.4.0"
ollama-downloads = "^0.1.0"
transformers = "^4.39.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-bdd = "^7.1.2"
pytest-cov = "^5.0.0"
pytest-datadir = "^1.5.0"
pytest-flake8 = "^1.1.1"
pytest-instafail = "^0.5.0"
pytest-json = "^0.4.0"
pytest-leaks = "^0.3.1"
pytest-pycodestyle = "^2.3.1"
pytest-redis = "^3.0.2"
pytest-regressions = "^2.5.0"
pytest-repeat = "^0.9.3"
pytest-replay = "^1.5.1"
pytest-rerunfailures = "^14.0"
pytest-selenium = "^4.1.0"
pytest-sugar = "^1.0.0"
pytest-timeout = "^2.3.1"
pytest-vagrant = "^2.1.0"
pytest-vcr = "^1.0.2"
pytest-xdist = "^3.5.0"
pytest-xvfb = "^3.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
